--- a/D1/test/README
+++ b/D1/test/README
@@ -1,3 +1,5 @@
+Update for Project 2: The primary classes are basically the same, except for cosmetic changes (i.e. changing names of classes), thus the same testing sweets can be used as in Project 1 with only minor changes.
+ 
 /**
  * Poker - 5 Card Draw
  *
